--- a/app/views/common/_discourse_stylesheet.html.erb
+++ b/app/views/common/_discourse_stylesheet.html.erb
@@ -1,13 +1,13 @@
 <%- if rtl? %>
-  <%= Stylesheet::Manager.stylesheet_link_tag(mobile_view? ? :mobile_rtl : :desktop_rtl) %>
+  <%= discourse_stylesheet_link_tag(mobile_view? ? :mobile_rtl : :desktop_rtl) %>
 <%- else %>
-  <%= Stylesheet::Manager.stylesheet_link_tag(mobile_view? ? :mobile : :desktop) %>
+  <%= discourse_stylesheet_link_tag(mobile_view? ? :mobile : :desktop) %>
 <%- end %>
 
 <%- if staff? %>
-  <%= Stylesheet::Manager.stylesheet_link_tag(:admin) %>
+  <%= discourse_stylesheet_link_tag(:admin, theme_key: nil) %>
 <%- end %>
 
-<%- unless customization_disabled? %>
-  <%= Stylesheet::Manager.stylesheet_link_tag(mobile_view? ? :mobile_theme : :desktop_theme, -1) %>
+<%- if theme_key %>
+  <%= discourse_stylesheet_link_tag(mobile_view? ? :mobile_theme : :desktop_theme) %>
 <%- end %>
