work in progress, getting admin pages to work again

--- a/app/assets/javascripts/admin/templates/customize-themes.hbs
+++ b/app/assets/javascripts/admin/templates/customize-themes.hbs
@@ -1,5 +1,5 @@
 <div class='content-list span6'>
-  <h3>{{i18n 'admin.customize.css_html.long_title'}}</h3>
+  <h3>{{i18n 'admin.customize.theme.long_title'}}</h3>
   <ul>
     {{#each model as |c|}}
       {{customize-link customization=c}}
