--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     <%- end %>
 
     <%- unless customization_disabled? %>
-      <%= raw Theme.custom_head_tag(session[:preview_style]) %>
+      <%= raw theme_lookup("head_tag") %>
     <%- end %>
 
     <%= render_google_universal_analytics_code %>
@@ -82,7 +82,7 @@
     </noscript>
 
     <%- unless customization_disabled? || loading_admin? %>
-      <%= Theme.custom_header(session[:preview_style], mobile_view? ? :mobile : :desktop) %>
+      <%= theme_lookup("header") %>
     <%- end %>
 
     <section id='main'>
@@ -118,7 +118,7 @@
     <%= render_google_analytics_code %>
 
     <%- unless customization_disabled? %>
-      <%= raw Theme.custom_body_tag(session[:preview_style]) %>
+      <%= raw theme_lookup("body_tag") %>
     <%- end %>
   </body>
 </html>
