--- a/app/assets/javascripts/admin/templates/customize-themes-edit.hbs
+++ b/app/assets/javascripts/admin/templates/customize-themes-edit.hbs
@@ -1,38 +1,21 @@
 <div class="current-style {{if maximized 'maximized'}}">
   <div class='wrapper'>
     {{text-field class="style-name" value=model.name}}
+
+    <div>
+      {{i18n "admin.customize.theme.customize_desc"}} {{combo-box content=targets value=currentTarget}}
+    </div>
+
     <div class='admin-controls'>
-      <ul>
-        <li>{{i18n "admin.customize.css"}}</li>
-        <ul class='group'>
-          <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'common_scss' replace=true}}{{i18n "admin.customize.common"}}{{/link-to}}</li>
-          <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'desktop_scss' replace=true}}{{i18n "admin.customize.desktop"}}{{/link-to}}</li>
-          <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'mobile_scss' replace=true}}{{i18n "admin.customize.mobile"}}{{/link-to}}</li>
-        </ul>
-
-        <li>{{i18n "admin.customize.header"}}</li>
-        <ul class='group'>
-          <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'header' replace=true}}{{i18n "admin.customize.desktop"}}{{/link-to}}</li>
-          <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'mobile-header' replace=true}}{{i18n "admin.customize.mobile"}}{{/link-to}}</li>
-        </ul>
-
-        <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'embedded-css' replace=true}}{{i18n "admin.customize.embedded_css"}}{{/link-to}}</li>
-
-        <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'mobile-top' replace=true}}{{i18n "admin.customize.top"}}{{/link-to}}</li>
-        <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'mobile-footer' replace=true}}{{i18n "admin.customize.footer"}}{{/link-to}}</li>
-        <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'top' replace=true}}{{i18n "admin.customize.top"}}{{/link-to}}</li>
-        <li>{{#link-to 'adminCustomizeThemes.edit' model.id 'footer' replace=true}}{{i18n "admin.customize.footer"}}{{/link-to}}</li>
-        <li>
-          {{#link-to 'adminCustomizeThemes.edit' model.id 'head-tag'}}
-            {{fa-icon "file-text-o"}}&nbsp;{{i18n 'admin.customize.head_tag.text'}}
-          {{/link-to}}
-        </li>
-        <li>
-          {{#link-to 'adminCustomizeThemes.edit' model.id 'body-tag'}}
-            {{fa-icon "file-text-o"}}&nbsp;{{i18n 'admin.customize.body_tag.text'}}
-          {{/link-to}}
-        </li>
-
+      <ul class='nav nav-pills'>
+        {{#each fields as |field|}}
+          <li>
+            {{#link-to 'adminCustomizeThemes.edit' model.id currentTargetName field.name replace=true title=field.title}}
+              {{#if field.icon}}{{fa-icon field.icon}} {{/if}}
+              {{i18n field.key}}
+            {{/link-to}}
+          </li>
+        {{/each}}
         <li class='toggle-maximize'>
           <a {{action "toggleMaximize"}}>
             <i class="fa fa-{{maximizeIcon}}"></i>
@@ -42,22 +25,11 @@
     </div>
 
     <div class="admin-container">
-      {{#if cssActive}}{{ace-editor content=model.stylesheet mode="scss"}}{{/if}}
-      {{#if headerActive}}{{ace-editor content=model.header mode="html"}}{{/if}}
-      {{#if topActive}}{{ace-editor content=model.top mode="html"}}{{/if}}
-      {{#if footerActive}}{{ace-editor content=model.footer mode="html"}}{{/if}}
-      {{#if headTagActive}}{{ace-editor content=model.head_tag mode="html"}}{{/if}}
-      {{#if bodyTagActive}}{{ace-editor content=model.body_tag mode="html"}}{{/if}}
-      {{#if embeddedCssActive}}{{ace-editor content=model.embedded_css mode="css"}}{{/if}}
-      {{#if mobileCssActive}}{{ace-editor content=model.mobile_stylesheet mode="scss"}}{{/if}}
-      {{#if mobileHeaderActive}}{{ace-editor content=model.mobile_header mode="html"}}{{/if}}
-      {{#if mobileTopActive}}{{ace-editor content=model.mobile_top mode="html"}}{{/if}}
-      {{#if mobileFooterActive}}{{ace-editor content=model.mobile_footer mode="html"}}{{/if}}
+      {{ace-editor content=activeSection mode=activeSectionMode}}
     </div>
 
     <div class='admin-footer'>
       <div class='status-actions'>
-        <span>{{i18n 'admin.customize.enabled'}} {{input type="checkbox" checked=model.enabled}}</span>
         {{#unless model.changed}}
           <a class='preview-link' href={{previewUrl}} target='_blank' title="{{i18n 'admin.customize.explain_preview'}}">{{i18n 'admin.customize.preview'}}</a>
           |
